src/grammer/TtlParserParser.py
# Generated from TtlParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TtlParserParser ( Parser ):

    grammarFileName = "TtlParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'not'", "'~'", "'!'", "'*'", 
                     "'/'", "'%'", "'+'", "'-'", "'>>>'", "'>>'", "'<<'", 
                     "'and'", "'&'", "'xor'", "'^'", "'or'", "'|'", "'<'", 
                     "'>'", "'<='", "'>='", "'='", "'=='", "'<>'", "'!='", 
                     "'&&'", "'||'", "'bplusrecv'", "'bplussend'", "'callmenu'", 
                     "'changedir'", "'clearscreen'", "'closett'", "'connect'", 
                     "'cygconnect'", "'disconnect'", "'dispstr'", "'enablekeyb'", 
                     "'flushrecv'", "'gethostname'", "'getmodemstatus'", 
                     "'gettitle'", "'getttpos'", "'kmtfinish'", "'kmtget'", 
                     "'kmtrecv'", "'kmtsend'", "'loadkeymap'", "'logautoclosemode'", 
                     "'logclose'", "'loginfo'", "'logopen'", "'logpause'", 
                     "'logrotate'", "'logstart'", "'logwrite'", "'quickvanrecv'", 
                     "'quickvansend'", "'recvln'", "'restoresetup'", "'scprecv'", 
                     "'scpsend'", "'send'", "'sendbinary'", "'sendbreak'", 
                     "'sendbroadcast'", "'sendfile'", "'sendkcode'", "'sendln'", 
                     "'sendlnbroadcast'", "'sendlnmulticast'", "'sendtext'", 
                     "'sendmulticast'", "'setbaud'", "'setdebug'", "'setdtr'", 
                     "'setecho'", "'setflowctrl'", "'setmulticastname'", 
                     "'setrts'", "'setserialdelaychar'", "'setserialdelayline'", 
                     "'setspeed'", "'setsync'", "'settitle'", "'showtt'", 
                     "'testlink'", "'unlink'", "'wait'", "'wait4all'", "'waitevent'", 
                     "'waitln'", "'waitn'", "'waitrecv'", "'waitregex'", 
                     "'xmodemrecv'", "'xmodemsend'", "'ymodemrecv'", "'ymodemsend'", 
                     "'zmodemrecv'", "'zmodemsend'", "'break'", "'call'", 
                     "'continue'", "'end'", "'execcmnd'", "'exit'", "'goto'", 
                     "'include'", "'mpause'", "'pause'", "'return'", "'code2str'", 
                     "'expandenv'", "'int2str'", "'regexoption'", "'sprintf'", 
                     "'sprintf2'", "'str2code'", "'str2int'", "'strcompare'", 
                     "'strconcat'", "'strcopy'", "'strinsert'", "'strjoin '", 
                     "'strlen'", "'strmatch'", "'strremove'", "'strreplace'", 
                     "'strscan'", "'strspecial'", "'strsplit'", "'strtrim'", 
                     "'tolower'", "'toupper'", "'basename'", "'dirname'", 
                     "'fileclose'", "'fileconcat'", "'filecopy'", "'filecreate'", 
                     "'filedelete'", "'filelock'", "'filemarkptr'", "'fileopen'", 
                     "'filereadln'", "'fileread'", "'filerename'", "'filesearch'", 
                     "'fileseek'", "'fileseekback'", "'filestat'", "'filestrseek'", 
                     "'filestrseek2'", "'filetruncate'", "'fileunlock'", 
                     "'filewrite'", "'filewriteln'", "'findfirst'", "'findnext'", 
                     "'findclose'", "'foldercreate'", "'folderdelete'", 
                     "'foldersearch'", "'getdir'", "'getfileattr'", "'makepath'", 
                     "'setdir'", "'setfileattr'", "'delpassword'", "'delpassword2'", 
                     "'getpassword'", "'getpassword2'", "'ispassword'", 
                     "'ispassword2'", "'passwordbox'", "'setpassword'", 
                     "'setpassword2'", "'beep'", "'bringupbox'", "'checksum8'", 
                     "'checksum8file'", "'checksum16'", "'checksum16file'", 
                     "'checksum32'", "'checksum32file'", "'closesbox'", 
                     "'clipb2var'", "'crc16'", "'crc16file'", "'crc32'", 
                     "'crc32file'", "'exec'", "'dirnamebox'", "'filenamebox'", 
                     "'getdate'", "'getenv'", "'getipv4addr'", "'getipv6addr'", 
                     "'getspecialfolder'", "'gettime'", "'getttdir'", "'getver'", 
                     "'ifdefined'", "'inputbox'", "'intdim'", "'listbox'", 
                     "'messagebox'", "'random'", "'rotateleft'", "'rotateright'", 
                     "'setdate'", "'setdlgpos'", "'setenv'", "'setexitcode'", 
                     "'settime'", "'show'", "'statusbox'", "'strdim'", "'uptime'", 
                     "'var2clipb'", "'yesnobox'", "'dummy'", "'for'", "'next'", 
                     "'while'", "'endwhile'", "'until'", "'enduntil'", "'do'", 
                     "'loop'", "'if'", "'then'", "'endif'", "'elseif'", 
                     "'else'", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NUMBER", "NUMBER_16", "STRING1", "KEYWORD", "RN", 
                      "WS1", "WS2" ]

    RULE_strContext = 0
    RULE_keyword = 1
    RULE_strExpression = 2
    RULE_intContext = 3
    RULE_intExpression = 4
    RULE_p1Expression = 5
    RULE_p2Expression = 6
    RULE_p3Expression = 7
    RULE_p4Expression = 8
    RULE_p5Expression = 9
    RULE_p6Expression = 10
    RULE_p7Expression = 11
    RULE_p8Expression = 12
    RULE_p9Expression = 13
    RULE_p10Expression = 14
    RULE_p11Expression = 15
    RULE_command = 16
    RULE_forNext = 17
    RULE_whileEndwhile = 18
    RULE_untilEnduntil = 19
    RULE_doLoop = 20
    RULE_if1 = 21
    RULE_if2 = 22
    RULE_elseif = 23
    RULE_else = 24
    RULE_input = 25
    RULE_label = 26
    RULE_commandline = 27
    RULE_statement = 28

    ruleNames =  [ "strContext", "keyword", "strExpression", "intContext", 
                   "intExpression", "p1Expression", "p2Expression", "p3Expression", 
                   "p4Expression", "p5Expression", "p6Expression", "p7Expression", 
                   "p8Expression", "p9Expression", "p10Expression", "p11Expression", 
                   "command", "forNext", "whileEndwhile", "untilEnduntil", 
                   "doLoop", "if1", "if2", "elseif", "else", "input", "label", 
                   "commandline", "statement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    T__107=108
    T__108=109
    T__109=110
    T__110=111
    T__111=112
    T__112=113
    T__113=114
    T__114=115
    T__115=116
    T__116=117
    T__117=118
    T__118=119
    T__119=120
    T__120=121
    T__121=122
    T__122=123
    T__123=124
    T__124=125
    T__125=126
    T__126=127
    T__127=128
    T__128=129
    T__129=130
    T__130=131
    T__131=132
    T__132=133
    T__133=134
    T__134=135
    T__135=136
    T__136=137
    T__137=138
    T__138=139
    T__139=140
    T__140=141
    T__141=142
    T__142=143
    T__143=144
    T__144=145
    T__145=146
    T__146=147
    T__147=148
    T__148=149
    T__149=150
    T__150=151
    T__151=152
    T__152=153
    T__153=154
    T__154=155
    T__155=156
    T__156=157
    T__157=158
    T__158=159
    T__159=160
    T__160=161
    T__161=162
    T__162=163
    T__163=164
    T__164=165
    T__165=166
    T__166=167
    T__167=168
    T__168=169
    T__169=170
    T__170=171
    T__171=172
    T__172=173
    T__173=174
    T__174=175
    T__175=176
    T__176=177
    T__177=178
    T__178=179
    T__179=180
    T__180=181
    T__181=182
    T__182=183
    T__183=184
    T__184=185
    T__185=186
    T__186=187
    T__187=188
    T__188=189
    T__189=190
    T__190=191
    T__191=192
    T__192=193
    T__193=194
    T__194=195
    T__195=196
    T__196=197
    T__197=198
    T__198=199
    T__199=200
    T__200=201
    T__201=202
    T__202=203
    T__203=204
    T__204=205
    T__205=206
    T__206=207
    T__207=208
    T__208=209
    T__209=210
    T__210=211
    T__211=212
    T__212=213
    T__213=214
    T__214=215
    T__215=216
    T__216=217
    T__217=218
    T__218=219
    T__219=220
    T__220=221
    T__221=222
    T__222=223
    T__223=224
    T__224=225
    T__225=226
    T__226=227
    T__227=228
    T__228=229
    T__229=230
    T__230=231
    T__231=232
    T__232=233
    T__233=234
    T__234=235
    T__235=236
    T__236=237
    T__237=238
    T__238=239
    NUMBER=240
    NUMBER_16=241
    STRING1=242
    KEYWORD=243
    RN=244
    WS1=245
    WS2=246

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StrContextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING1(self):
            return self.getToken(TtlParserParser.STRING1, 0)

        def getRuleIndex(self):
            return TtlParserParser.RULE_strContext

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStrContext" ):
                listener.enterStrContext(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStrContext" ):
                listener.exitStrContext(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStrContext" ):
                return visitor.visitStrContext(self)
            else:
                return visitor.visitChildren(self)




    def strContext(self):

        localctx = TtlParserParser.StrContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_strContext)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(TtlParserParser.STRING1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(TtlParserParser.KEYWORD, 0)

        def getRuleIndex(self):
            return TtlParserParser.RULE_keyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyword" ):
                listener.enterKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyword" ):
                listener.exitKeyword(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyword" ):
                return visitor.visitKeyword(self)
            else:
                return visitor.visitChildren(self)




    def keyword(self):

        localctx = TtlParserParser.KeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_keyword)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(TtlParserParser.KEYWORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StrExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def strContext(self):
            return self.getTypedRuleContext(TtlParserParser.StrContextContext,0)


        def keyword(self):
            return self.getTypedRuleContext(TtlParserParser.KeywordContext,0)


        def getRuleIndex(self):
            return TtlParserParser.RULE_strExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStrExpression" ):
                listener.enterStrExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStrExpression" ):
                listener.exitStrExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStrExpression" ):
                return visitor.visitStrExpression(self)
            else:
                return visitor.visitChildren(self)




    def strExpression(self):

        localctx = TtlParserParser.StrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_strExpression)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [242]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.strContext()
                pass
            elif token in [243]:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.keyword()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntContextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(TtlParserParser.NUMBER, 0)

        def NUMBER_16(self):
            return self.getToken(TtlParserParser.NUMBER_16, 0)

        def getRuleIndex(self):
            return TtlParserParser.RULE_intContext

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntContext" ):
                listener.enterIntContext(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntContext" ):
                listener.exitIntContext(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntContext" ):
                return visitor.visitIntContext(self)
            else:
                return visitor.visitChildren(self)




    def intContext(self):

        localctx = TtlParserParser.IntContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_intContext)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            _la = self._input.LA(1)
            if not(_la==240 or _la==241):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intContext(self):
            return self.getTypedRuleContext(TtlParserParser.IntContextContext,0)


        def keyword(self):
            return self.getTypedRuleContext(TtlParserParser.KeywordContext,0)


        def p11Expression(self):
            return self.getTypedRuleContext(TtlParserParser.P11ExpressionContext,0)


        def getRuleIndex(self):
            return TtlParserParser.RULE_intExpression
